fix marker style for visibility

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -66,7 +66,7 @@ input[type=submit] {
 	width: 100%;
 	height: 100%;
 	.marker-cluster {
-		background-color: rgba(255,255,255,0.4) !important;
+		background-color: rgba(0,0,0,0.4) !important;
 		> div {
 			background-color: #fff !important;
 			font-weight: 600;
